--- a/react/admin/src/App.css
+++ b/react/admin/src/App.css
@@ -34,19 +34,9 @@ body {
   margin: 0;
 }
 
-*:not(.wysiwyg-editor *, .wysiwyg-toolbar *) {
-  font-family: 'Tahoma', 'Verdana', 'Trebuchet MS', 'Arial';
-  font-size: small;
-  text-size-adjust: none !important;
-  -webkit-text-size-adjust: none !important;
-}
-
-* {
-  border-radius: 0.2em
-}
-
-img {
-  border-radius: 0;
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 /* Thank you https://css-tricks.com/copy-the-browsers-native-focus-styles/ */
@@ -86,10 +76,6 @@ input, select, button, option, ul.recipient-list {
 input::placeholder {
   font-style: italic;
   color: #888;
-}
-
-button, button * {
-  font-size: x-small;
 }
 
 input, select, option {
